# Langchain

./: README.md  pyproject.toml
CH-1/: 1_Basics.ipynb  2_Messages.ipynb  3_Structured_Outputs.ipynb
CH-2/: 1_First_chain.ipynb  2_Chain_with_customRunnable.ipynb  3_parallel__Chain.ipynb  4_condisional_chains.ipynb
CH-3/: 1_ReAct_Agent_intro.ipynb  2_Tools_ calling.ipynb  3_Memory_agent.ipynb
